# 0docs-e2e-projects-py

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
app/: main.py
app/models/: __init__.py  contact.py  customer.py  lead.py  opportunity.py
app/routers/: __init__.py  analytics.py  contacts.py  customers.py  dashboard.py  leads.py  messages.py  opportunities.py  users.py
app/schemas/: __init__.py  customer.py  lead.py  opportunity.py
app/services/: __init__.py  contact_service.py  customer_service.py  hello_service.py  lead_service.py  opportunity_service.py
tests/: __init__.py  test_customers.py  test_leads.py  test_opportunities.py
