[project]
name = "fastapi-crm-app"
version = "0.1.0"
description = "A FastAPI application for Customer Relationship Management (CRM)."

readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "*"
uvicorn = "*"
httpx = "*"

[project.optional-dependencies]
dev = ["pytest", "httpx"]